Loqate/main/default/objects/Payment_Integration__c/Payment_Integration__c.object-meta.xml
<CustomObject>
    <label>Payment Integration</label>
    <nameField>
        <label>Payment Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>