Loqate/main/default/objects/Payment_Integration__c/fields/Account_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Field__c</fullName>
    <label>Account Number Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>