Loqate/main/default/objects/Payment_Integration__c/fields/Bank_BIC_Field__c.field-meta.xml
<CustomField>
    <fullName>Bank_BIC_Field__c</fullName>
    <label>Bank BIC Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>