Loqate/main/default/objects/Payment_Integration__c/fields/Branch_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name_Field__c</fullName>
    <label>Branch Name Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>