Loqate/main/default/objects/Payment_Integration__c/fields/CHAPS_Field__c.field-meta.xml
<CustomField>
    <fullName>CHAPS_Field__c</fullName>
    <inlineHelpText>This should ideally be a check box. Specifies whether the sort code supports CHAPS payments.</inlineHelpText>
    <label>CHAPS Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>