Loqate/main/default/objects/Payment_Integration__c/fields/Contact_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Field__c</fullName>
    <label>Contact Phone Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>