Loqate/main/default/objects/Payment_Integration__c/fields/Direct_Debit_Field__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Field__c</fullName>
    <inlineHelpText>This should ideally be a check box. Specifies whether the sort code supports Direct Debit payments.</inlineHelpText>
    <label>Direct Debit Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>