Loqate/main/default/objects/Payment_Integration__c/fields/Faster_Payments_Field__c.field-meta.xml
<CustomField>
    <fullName>Faster_Payments_Field__c</fullName>
    <inlineHelpText>This should ideally be a check box. Specifies whether the sort code supports Faster Payments.</inlineHelpText>
    <label>Faster Payments Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>