Loqate/main/default/objects/Payment_Integration__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <referenceTo>Setting__c</referenceTo>
    <relationshipLabel>Payment Integrations</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>