Loqate/main/default/objects/Payment_Integration__c/fields/Sort_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code_Field__c</fullName>
    <label>Sort Code Field</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>