Loqate/main/default/objects/Payment_Integration__c/fields/Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Status_Field__c</fullName>
    <inlineHelpText>This should ideally be a check box. We can populate this field for you with the validation state of the bank details. Specifying this field and adding it into a validation rule allows you to force users to enter validated details.</inlineHelpText>
    <label>Validation Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>